--- a/app/main.ipynb
+++ b/app/main.ipynb
@@ -41,27 +41,25 @@
     "import sqlite3\n",
     "\n",
     "\n",
-    "# Шлях до бази\n",
-    "db_path = \"restaurant.db\"  # заміни на свій файл\n",
+    "db_path = \"db.sqlite3\"\n",
     "conn = sqlite3.connect(db_path)\n",
     "\n",
-    "# SQL JOIN трьох таблиць\n",
     "query = \"\"\"\n",
-    "        SELECT oi.order_item_id,\n",
-    "               oi.order_id,\n",
-    "               oi.product_id,\n",
-    "               oi.quantity,\n",
-    "               oi.price AS item_price,\n",
-    "               p.product_name,\n",
-    "               p.category,\n",
-    "               p.price  AS product_price,\n",
-    "               o.order_date,\n",
-    "               o.customer_id,\n",
-    "               o.total_amount\n",
-    "        FROM order_items oi\n",
-    "                 JOIN products p ON oi.product_id = p.product_id\n",
-    "                 JOIN orders o ON oi.order_id = o.order_id \\\n",
-    "        \"\"\"\n",
+    "    SELECT oi.order_item_id,\n",
+    "           oi.order_id,\n",
+    "           oi.product_id,\n",
+    "           oi.quantity,\n",
+    "           oi.price AS item_price,\n",
+    "           p.product_name,\n",
+    "           p.category,\n",
+    "           p.price AS product_price,\n",
+    "           o.order_date,\n",
+    "           o.customer_id,\n",
+    "           o.total_amount\n",
+    "    FROM order_items oi\n",
+    "    JOIN products p ON oi.product_id = p.product_id\n",
+    "    JOIN orders o ON oi.order_id = o.order_id\n",
+    "\"\"\"\n",
     "\n",
     "# Читаємо у DataFrame\n",
     "df = pd.read_sql_query(query, conn)\n",
@@ -222,10 +220,10 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "df['Order Datetime'] = pd.to_datetime(df['Order Datetime'])\n",
+    "df['order_date'] = pd.to_datetime(df['order_date'])\n",
     "\n",
     "# Витягуємо годину замовлення\n",
-    "df['Order Hour'] = df['Order Datetime'].dt.hour\n",
+    "df['Order Hour'] = df['order_date'].dt.hour\n",
     "\n",
     "# Групуємо по годині, сумуємо доходи\n",
     "income_per_hour = df.groupby('Order Hour')['Item Price'].sum()\n",
@@ -265,9 +263,9 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "df['Order Datetime'] = pd.to_datetime(df['Order Datetime'])\n",
+    "df['order_date'] = pd.to_datetime(df['order_date'])\n",
     "\n",
-    "df['Order Day Of The Week'] = df['Order Datetime'].dt.dayofweek\n",
+    "df['Order Day Of The Week'] = df['order_date'].dt.dayofweek\n",
     "\n",
     "days_map = {0: 'Monday', 1: 'Tuesday', 2: 'Wednesday', 3: 'Thursday',\n",
     "            4: 'Friday', 5: 'Saturday', 6: 'Sunday'}\n",
