--- a/app/main.ipynb
+++ b/app/main.ipynb
@@ -41,7 +41,7 @@
     "import sqlite3\n",
     "\n",
     "\n",
-    "db_path = \"db.sqlite3\"\n",
+    "db_path = \"../db.sqlite3\"\n",
     "conn = sqlite3.connect(db_path)\n",
     "\n",
     "query = \"\"\"\n",
@@ -225,8 +225,11 @@
     "# Витягуємо годину замовлення\n",
     "df['Order Hour'] = df['order_date'].dt.hour\n",
     "\n",
+    "# Обчислюємо загальну суму за позицію\n",
+    "df['total_item_price'] = df['item_price'] * df['quantity']\n",
+    "\n",
     "# Групуємо по годині, сумуємо доходи\n",
-    "income_per_hour = df.groupby('Order Hour')['Item Price'].sum()\n",
+    "income_per_hour = df.groupby('Order Hour')['total_item_price'].sum()\n",
     "\n",
     "# Створюємо діаграму\n",
     "plt.figure(figsize=(10,6))\n",
@@ -234,9 +237,9 @@
     "plt.title('Total Restaurant Income per Order Hour')\n",
     "plt.xlabel('Hour of the Day')\n",
     "plt.ylabel('Total Income')\n",
-    "plt.xticks(rotation=0)  # щоб години були горизонтально\n",
+    "plt.xticks(rotation=0)  # години горизонтально\n",
     "plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
-    "plt.show()"
+    "plt.show()\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -272,8 +275,13 @@
     "\n",
     "df['Order Day Name'] = df['Order Day Of The Week'].map(days_map)\n",
     "\n",
-    "income_per_day = df.groupby('Order Day Name')['Item Price'].sum()\n",
+    "# Рахуємо повну вартість кожної позиції\n",
+    "df['total_item_price'] = df['item_price'] * df['quantity']\n",
     "\n",
+    "# Групуємо по дню тижня, сумуємо total_item_price\n",
+    "income_per_day = df.groupby('Order Day Name')['total_item_price'].sum()\n",
+    "\n",
+    "# Встановлюємо порядок днів тижня\n",
     "ordered_days = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']\n",
     "income_per_day = income_per_day.reindex(ordered_days)\n",
     "\n",
@@ -284,7 +292,7 @@
     "plt.ylabel('Total Income')\n",
     "plt.xticks(rotation=45)\n",
     "plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
-    "plt.show()"
+    "plt.show()\n"
    ],
    "metadata": {
     "collapsed": false,
